Correct alignment of tiles

--- a/UI/css/styles.css
+++ b/UI/css/styles.css
@@ -237,10 +237,12 @@ color: dimgray;
 }
 .overlay form>button{
     width: 30%;
-    height: 30px;
+    min-height: 30px;
     background-color: darkolivegreen;
     border: 1px solid darkgreen;
     color: lightgrey;
+    padding:2px;
+    display: block;
 }
 .overlay li{
     list-style-type: none;
@@ -372,6 +374,8 @@ color: dimgray;
     opacity: 0.9;
     border-radius: 2px;
     width: 15%;
+    height: 180px;
+    overflow-y: hidden; 
 }
 .tiles img{
     width: 80%;
